@@ -4,24 +4,19 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import ru.teamfour.dao.entity.adoptionanimal.AdoptionProcessStatus;
-import ru.teamfour.dao.entity.animal.AdoptionAnimalState;
 import ru.teamfour.dao.entity.dailyreport.DailyReport;
-import ru.teamfour.dao.entity.user.RoleUser;
 import ru.teamfour.dao.entity.user.User;
-import ru.teamfour.dto.adoptionanimal.AdoptionProcessAnimalCreateDto;
 import ru.teamfour.repositories.AdoptionProcessAnimalRepository;
-import ru.teamfour.repositories.UserRepository;
 import ru.teamfour.service.api.ProducerService;
 import ru.teamfour.service.impl.user.UserService;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
-import static java.util.concurrent.TimeUnit.DAYS;
-import static org.apache.commons.lang3.BooleanUtils.forEach;
-import static ru.teamfour.dao.entity.animal.AdoptionAnimalState.PROCESS_OF_ADOPTION;
 import static ru.teamfour.dao.entity.user.RoleUser.VOLUNTEER;
 
 @Component
@@ -36,14 +31,11 @@ public class NotificationCron {
         this.producerService = producerService;
         this.repository = repository;
         this.userService = userService;
-
-
     }
 
     /**
      * метод отсылает напоминание усыновителям, у которых нет отчета
      */
-
     @Scheduled(cron = "0 0 21 * * *")
     public void doReminderReport() {
 
@@ -74,27 +66,23 @@ public class NotificationCron {
      * метод отсылает напоминание всем волонтерам
      * о проверке отчетов об усыновлении
      **/
-
     @Scheduled(cron = "0 0 21 * * *")
     public void doReminderCheckReport() {
         doReminderCheckReportList()
-                .forEach(chat ->
-                        producerService
-                                .producerAnswer(new SendMessage
-                                        (chat,
-                                                "Уважаемый волонтер, настало время проверять отчеты от усыновителей.")));
-
+                .forEach(chat -> producerService
+                        .producerAnswer(new SendMessage
+                                (chat, "Уважаемый волонтер, настало время проверять отчеты от усыновителей.")
+                        )
+                );
     }
 
     /**
      * метод составляет список всех волонтеров
      */
     public List<String> doReminderCheckReportList() {
-        List<String> list = new ArrayList<>();
-        userService.getUsersByRole(VOLUNTEER)
-                .forEach(user -> list.add(user.getChatId().toString()));
-        return list;
-
+        return userService.getUsersByRole(VOLUNTEER).stream()
+                .map(user -> user.getChatId().toString())
+                .toList();
     }
 
     /**
@@ -106,12 +94,15 @@ public class NotificationCron {
         User volunteer = userService.getAvailableVolunteer();
         doReminderBadReportList()
                 .forEach(parent ->
-                        producerService
-                                .producerAnswer(new SendMessage
-                                        (volunteer.getChatId().toString(),
-                                                "Уважаемый волонтер, обратите внимание," +
-                                                        " что усыновитель c чата" + parent +
-                                                        " уже два дня не сдавал отчет!")));
+                        producerService.producerAnswer(
+                                new SendMessage(
+                                        volunteer.getChatId().toString(),
+                                        "Уважаемый волонтер, обратите внимание," +
+                                                " что усыновитель c чата" + parent +
+                                                " уже два дня не сдавал отчет!"
+                                )
+                        )
+                );
 
     }
 
@@ -120,19 +111,15 @@ public class NotificationCron {
      * у которых нет отчета два дня
      */
     public List<String> doReminderBadReportList() {
-        // User volunteer = userService.getAvailableVolunteer();
-        List<String> list =
-                repository.findByAdoptionProcessStatus(AdoptionProcessStatus.PROCESS_ADOPTION).stream()
-                        .filter(parent ->
-                                !(parent.getDailyReports().stream()
-                                        .map(DailyReport::getDate_report)
-                                        .toList()
-                                        .containsAll(List.of(LocalDate.now()
-                                                .minusDays(1), LocalDate.now()))))
-
-                        .map(parent -> parent.getUser().getChatId().toString())
-                        .collect(Collectors.toList());
-        return list;
-
+        return repository.findByAdoptionProcessStatus(AdoptionProcessStatus.PROCESS_ADOPTION).stream()
+                .filter(parent ->
+                        !(new HashSet<>(parent.getDailyReports().stream()
+                                .map(DailyReport::getDate_report)
+                                .toList())
+                                .containsAll(List.of(LocalDate.now()
+                                        .minusDays(1), LocalDate.now()))))
+                .map(parent -> parent.getUser().getChatId().toString())
+                .collect(Collectors.toList());
     }
+
 }
